--- a/myPj/inverse/index.html
+++ b/myPj/inverse/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>逆写像アニメーション (扇形折り畳み)</title>
+  <title>Julia集合 - 逆写像- </title>
   <style>
     body {
       margin: 0;
@@ -81,7 +81,7 @@
   <canvas id="inverse-canvas" width="600" height="600"></canvas>
 
   <!-- 計算式を表示する領域 -->
-  <div id="formula">ここに計算式・処理内容が表示されます。<br><br><br></div>
+  <div id="formula">ここに計算式・処理内容が表示されます。<br><br><br><br></div>
 
   <!-- 設定フォーム（下部に縦並びで配置） -->
   <div id="config">
