--- a/myPj/inverse/index.html
+++ b/myPj/inverse/index.html
@@ -122,7 +122,13 @@
       <small>各ステップの停止時間 (ms)。500〜3000ms 程度がおすすめ。</small>
     </div>
   </div>
-
+  <div>
+    <br>
+    関連: <a href="https://uminomae.github.io/pjdhiro/20250531julia/" target="_blank" rel="noopener noreferrer">
+      陰陽なJulia集合を逆にたどる - Emotion Processing in Project Design
+    </a>
+  </div>
+  
 
 
   <!-- ES モジュールとして main.js を読み込む -->
