--- a/myPj/inverse/index.html
+++ b/myPj/inverse/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Julia集合 - 逆写像- </title>
+  <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
   <style>
     body {
       margin: 0;
