--- a/myPj/inverse/index.html
+++ b/myPj/inverse/index.html
@@ -5,6 +5,7 @@
   <title>Julia集合 - 逆写像- </title>
   <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
   <style>
+    /* ───（以下、あとで説明するCSS）────────────────────────────────── */
     body {
       margin: 0;
       background: #111;
@@ -12,18 +13,54 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      height: 100vh;
+      min-height: 100vh;
       color: #fff;
       font-family: sans-serif;
       padding-top: 20px;
     }
-    canvas {
-      border: 1px solid #444;
+    /* ─── ボタン類／フォーム／テキストなどは z-index:2 で最前面 ─── */
+    #controls,
+    #formula,
+    #config {
+      position: relative;
+      z-index: 2;
+    }
+    /* ─── キャンバス＋背景画像を重ねるコンテナ ─── */
+    #canvas-container {
+      position: relative;
+      width: 800px;
+      height: 600px;
       margin-top: 20px;
-    }
-    #controls {
       margin-bottom: 20px;
+      z-index: 0;
     }
+    /* ─── 背景の陰陽マーク画像 ─── */
+    #bg-image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      /* 見かけ上キャンバスの 80% 幅に */
+      width: 40%;
+      height: auto;
+      opacity: 0.1;
+      pointer-events: none;
+      z-index: 0;
+    }
+    /* ─── アニメーション用キャンバス ─── */
+    #inverse-canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      /* 親コンテナいっぱいに見せる */
+      width: 100%;
+      height: 100%;
+      border: 1px solid #444;
+      background: transparent; /* 透明にして画像を透かす */
+      z-index: 1;
+    }
+
+    /* 元々あったフォームまわりなど */
     #config {
       margin-top: 10px;
       display: flex;
@@ -55,7 +92,6 @@
       font-size: 16px;
       cursor: pointer;
     }
-    /* フォーミュラ表示領域：固定高さを解除 */
     #formula {
       margin-top: 20px;
       font-size: 16px;
@@ -64,75 +100,60 @@
       text-align: center;
       max-width: 600px;
     }
-    button {
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <!-- 計算スタート・一時停止・再生ボタン（上部に配置） -->
+  <!-- ① 計算スタート・一時停止・再生ボタン（最前面 z-index:2） -->
   <div id="controls">
     <button id="start-btn">計算スタート</button>
-    <span style="margin: 0 10px;"></span>
     <button id="pause-btn">一時停止</button>
     <button id="resume-btn">再生</button>
   </div>
 
-  <!-- Canvas 要素 -->
-  <canvas id="inverse-canvas" width="600" height="600"></canvas>
+  <!-- ② キャンバス＋背景画像を重ねるコンテナ（z-index:0〜1） -->
+  <div id="canvas-container">
+    <!-- 背後に薄く表示したい陰陽マーク -->
+    <img id="bg-image" src="js/onmyo.png" alt="陰陽マーク" />
+    <!-- アニメーション用canvas：描画バッファは必ず width/height 属性で指定すること！ -->
+    <canvas id="inverse-canvas" width="800" height="600"></canvas>
+  </div>
 
-  <!-- 計算式を表示する領域 -->
-  <div id="formula">ここに計算式・処理内容が表示されます。<br><br><br><br></div>
+  <!-- ③ 計算式表示エリア（z-index:2） -->
+  <div id="formula">
+    ここに計算式・処理内容が表示されます。<br><br><br><br>
+  </div>
 
-  <!-- 設定フォーム（下部に縦並びで配置） -->
+  <!-- ④ 各種設定フォーム（z-index:2） -->
   <div id="config">
-    <!-- c (実部) -->
     <div class="field">
       <label for="cRe">c の実部 (cRe)</label>
       <input type="number" id="cRe" step="0.001" value="-0.4">
       <small>ジュリア集合を決める複素定数 c の実部です。<br>
-        値を変えるとフラクタルの形が大きく変化します。<br>
-        推奨：−1.5～1.5<br>
-        <br>
-        ex.実部-0.8+虚部0.156,  -0.4+0.6, 0.285+0.01</small>
+        値を変えるとフラクタルの形が大きく変化します。推奨：−1.5〜1.5</small>
     </div>
-    <!-- c (虚部) -->
     <div class="field">
       <label for="cIm">c の虚部 (cIm)</label>
       <input type="number" id="cIm" step="0.001" value="0.6">
-      <small>ジュリア集合を決める複素定数 c の虚部です。<br>
-        推奨：0.0～1.0</small>
+      <small>ジュリア集合を決める複素定数 c の虚部です。推奨：0.0〜1.0</small>
     </div>
-    <!-- samples -->
     <div class="field">
       <label for="samples">samples (サンプリング数)</label>
-      <input type="number" id="samples" step="1" value="90">
-      <small>最初の円を描画する点の数（単位円上に打つ点の数）。45〜360 程度が目安。<br>
-        あまり多すぎると描画に時間がかかりますので注意してください。</small>
+      <input type="number" id="samples" step="1" value="45">
+      <small>最初の円を描画する点の数。45〜360 程度が目安。</small>
     </div>
-    <!-- maxIter -->
     <div class="field">
       <label for="maxIter">maxIter (世代数)</label>
       <input type="number" id="maxIter" step="1" value="12">
       <small>逆写像を繰り返す回数。10〜20 程度が目安。</small>
     </div>
-    <!-- pauseMs -->
     <div class="field">
       <label for="pauseMs">pauseMs (一時停止時間)</label>
       <input type="number" id="pauseMs" step="100" value="500">
       <small>各ステップの停止時間 (ms)。500〜3000ms 程度がおすすめ。</small>
     </div>
   </div>
-  <div>
-    <br>
-    関連: <a href="https://uminomae.github.io/pjdhiro/20250531julia/" target="_blank" rel="noopener noreferrer">
-      陰陽なJulia集合を逆にたどる - Emotion Processing in Project Design
-    </a>
-  </div>
-  
 
-
-  <!-- ES モジュールとして main.js を読み込む -->
+  <!-- ⑤ スクリプト本体 -->
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
