--- a/myPj/inverse/threeJuliaInverseAnimate.html
+++ b/myPj/inverse/threeJuliaInverseAnimate.html
@@ -63,6 +63,9 @@
     <input type="number" id="input-iter" min="1" step="1" value="12" />
     <button id="btn-run">Run</button>
     <span id="status">(待機中)</span>
+    <p>赤色は発散と収束の境界です</p>
+    <p>ドラッグ、ホイールでカメラ（視点）を移動できます</p>
+    <p>やり直す場合は毎回ブラウザを更新してください</p>
   </div>
 
   <!-- ─── メインスクリプト読み込み ─── -->
