--- a/myPj/inverse/index.html
+++ b/myPj/inverse/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <title>Julia集合 - 逆写像- </title>
   <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
+  <!-- Google アナリティクス (gtag.js) 設定 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WV09PB2PZT');
+  </script>
   <style>
     /* ───（以下、あとで説明するCSS）────────────────────────────────── */
     body {
