--- a/myPj/inverse/threeJuliaInverseAnimate.html
+++ b/myPj/inverse/threeJuliaInverseAnimate.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>Three.js 逆写像アニメーション (Z→赤チャネル)</title>
+  <!-- Google アナリティクス (gtag.js) 設定 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WV09PB2PZT');
+  </script>
+  
   <style>
     body {
       margin: 0;
