moveDir:Julia-set/3d

--- a/myPj/JuliaSet/3DJuliaInverse.html
+++ b/myPj/JuliaSet/3DJuliaInverse.html
@@ -86,7 +86,7 @@
       animateLoop,
       runInverseAnimation,
       scene
-    } from './js/threeInverseAnimate-main.js';
+    } from './js/3d/3dMain.js';
 
     // Three.js の初期化
     initThree();
