--- a/myPj/JuliaSet/index.html
+++ b/myPj/JuliaSet/index.html
@@ -122,7 +122,7 @@
   <!-- ② キャンバス＋背景画像を重ねるコンテナ（z-index:0〜1） -->
   <div id="canvas-container">
     <!-- 背後に薄く表示したい陰陽マーク -->
-    <img id="bg-image" src="js/onmyo.png" alt="陰陽マーク" />
+    <img id="bg-image" src="img/onmyo.png" alt="陰陽マーク" />
     <!-- アニメーション用canvas：描画バッファは必ず width/height 属性で指定すること！ -->
     <canvas id="inverse-canvas" width="800" height="600"></canvas>
   </div>
@@ -195,6 +195,6 @@
   </div>
 
   <!-- ⑤ スクリプト本体 -->
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/2d/2dMain.js"></script>
 </body>
 </html>
