rfct:complex-number

--- a/myPj/JuliaSet/3DJuliaInverse.html
+++ b/myPj/JuliaSet/3DJuliaInverse.html
@@ -80,7 +80,7 @@
 
   <!-- ─── メインスクリプト読み込み ─── -->
   <script type="module">
-    import { Complex } from './js/complex.js';
+    import { Complex } from './js/util/complex-number.js';
     import {
       initThree,
       animateLoop,
