rfct:2d:sub func

--- a/myPj/JuliaSet/index.html
+++ b/myPj/JuliaSet/index.html
@@ -195,6 +195,6 @@
   </div>
 
   <!-- ⑤ スクリプト本体 -->
-  <script type="module" src="js/2d/2dMain.js"></script>
+  <script type="module" src="js/2d/d2-main.js"></script>
 </body>
 </html>
