--- a/myPj/JuliaSet/3DJuliaInverse copy.html
+++ b/myPj/JuliaSet/3DJuliaInverse copy.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Three.js 逆写像アニメーション (Z→赤チャネル)＋凡例＋Pause/Stop</title>
+  <title>Three.js 逆写像アニメーション (Z→赤チャネル)＋凡例</title>
   <!-- Google アナリティクス (gtag.js) 設定 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
   <script>
@@ -30,10 +30,12 @@
     /* 凡例用 Canvas を右下に重ねて表示 */
     #legend-canvas {
       position: absolute;
+
       top: 20px;
       right: 20px;
       left: auto;
       bottom: auto;
+      
       width: 60px;   /* 必要に応じて調整 */
       height: 300px;  /* 必要に応じて調整 */
       background: rgba(255, 255, 255, 0.05);
@@ -97,15 +99,11 @@
       <input type="number" id="input-n" min="10" step="10" value="90" />,  
       maxIter = 
       <input type="number" id="input-iter" min="1" step="1" value="12" />
-      <br>
-      <!-- ３つのボタンを追加 -->
       <button id="btn-run">Run</button>
-      <button id="btn-pause" style="display:none;">Pause</button>
-      <button id="btn-stop">Stop</button>
       <span id="status">(待機中)</span>
       <p>赤色は発散と収束の境界です</p>
       <p>ドラッグ、ホイールでカメラ（視点）を移動できます</p>
-      <p>Stop を押すと初期状態に戻ります</p>
+      <p>やり直す場合は毎回ブラウザを更新してください</p>
     </div>
   </div>
 
@@ -119,24 +117,16 @@
       scene
     } from './js/3d/d3-main.js';
 
-    // ───────── グローバルフラグ ─────────
-    // HTML の window オブジェクトにフラグを用意
-    window.isRunning = false; // アニメーションが一度も始まっていない or 停止された直後なら false
-    window.isPaused  = false; // Pause 中なら true
-    window.isStopped = false; // Stop リクエストがあれば true
-
-    // ───────── Three.js 初期化 ─────────
+    // Three.js の初期化
     initThree();
     animateLoop();
 
-    // ───────── UI 要素を取得 ─────────
+    // UI 要素を取得
     const inputRe   = document.getElementById('input-re');
     const inputIm   = document.getElementById('input-im');
     const inputN    = document.getElementById('input-n');
     const inputIter = document.getElementById('input-iter');
     const btnRun    = document.getElementById('btn-run');
-    const btnPause  = document.getElementById('btn-pause');
-    const btnStop   = document.getElementById('btn-stop');
     const status    = document.getElementById('status');
 
     // 凡例用 Canvas のコンテキスト
@@ -196,107 +186,41 @@
     // 初期表示：凡例を一度描画しておく
     drawLegend(legendMinZ, legendMaxZ);
 
-    // ───────── 各ボタンのイベントリスナ ─────────
-
-    // ■ Run／Resume ボタン
     btnRun.addEventListener('click', async () => {
-      if (!window.isRunning) {
-        // ─── 未だ開始していない（または Stop 後の初期化状態）───
-        window.isRunning = true;
-        window.isPaused  = false;
-        window.isStopped = false;
-
-        // ボタン表示を切り替え
-        btnRun.style.display   = 'none';
-        btnPause.style.display = 'inline-block';
-
-        // 入力値を取得して Julia 定数など作成
-        const cre = parseFloat(inputRe.value);
-        const cim = parseFloat(inputIm.value);
-        const c   = new Complex(cre, cim);
-        const N       = parseInt(inputN.value, 10);
-        const maxIter = parseInt(inputIter.value, 10);
-
-        status.textContent = '(実行中…)';
-        try {
-          // runInverseAnimation は { minZ, maxZ, totalPoints } を返す前提
-          const { minZ, maxZ, totalPoints } = await runInverseAnimation(c, N, maxIter, 800);
-          // 正常終了したら最初の状態に戻す
-          window.isRunning = false;
-          btnPause.style.display = 'none';
-          btnPause.textContent   = 'Pause';
-          btnRun.textContent     = 'Run';
-          btnRun.style.display   = 'inline-block';
-
-          // ステータス更新＆凡例再描画
-          status.textContent = `(完了: N=${N}, maxIter=${maxIter}, 点数=${totalPoints})`;
-          legendMinZ = minZ;
-          legendMaxZ = maxZ;
-          drawLegend(legendMinZ, legendMaxZ);
-        } catch (err) {
-          // Stop リクエストなどで中断された場合
-          window.isRunning = false;
-          btnPause.style.display = 'none';
-          btnPause.textContent   = 'Pause';
-          btnRun.textContent     = 'Run';
-          btnRun.style.display   = 'inline-block';
-          status.textContent = '(Stopped)';
-        }
-      } else if (window.isPaused) {
-        // ─── 一時停止中（Resume）───
-        window.isPaused = false;
-        btnPause.textContent = 'Pause';
-      }
-    });
-
-    // ■ Pause／Resume ボタン
-    btnPause.addEventListener('click', () => {
-      if (!window.isPaused) {
-        // Pause 状態にする
-        window.isPaused = true;
-        btnPause.textContent = 'Resume';
-        status.textContent   = '(Paused)';
-      } else {
-        // 再開（Resume）
-        window.isPaused = false;
-        btnPause.textContent = 'Pause';
-        status.textContent   = '(実行中…)';
-      }
-    });
-
-    // ■ Stop ボタン
-    btnStop.addEventListener('click', () => {
-      // 停止リクエストフラグを立てる
-      window.isStopped = true;
-      window.isPaused  = false;
-      window.isRunning = false;
-
-      // シーン上のすべての Points を削除
+      // 既存の Points オブジェクトをすべて削除
       const toRemove = [];
       scene.traverse(obj => {
         if (obj.isPoints) toRemove.push(obj);
       });
-      for (const p of toRemove) scene.remove(p);
+      for (const p of toRemove) {
+        scene.remove(p);
+      }
 
-      // ボタン表示を初期状態に戻す
-      btnPause.style.display = 'none';
-      btnPause.textContent   = 'Pause';
-      btnRun.textContent     = 'Run';
-      btnRun.style.display   = 'inline-block';
+      // Julia 定数 c を作成
+      const cre = parseFloat(inputRe.value);
+      const cim = parseFloat(inputIm.value);
+      const c   = new Complex(cre, cim);
 
-      // ステータスを初期化
-      status.textContent = '(待機中)';
+      // N, maxIter を取得
+      const N       = parseInt(inputN.value, 10);
+      const maxIter = parseInt(inputIter.value, 10);
 
-      // 凡例も初期化して再描画
-      legendMinZ = 0;
-      legendMaxZ = 2.0;
-      drawLegend(legendMinZ, legendMaxZ);
+      status.textContent = '(実行中…)';
+      try {
+        // runInverseAnimation は { minZ, maxZ, totalPoints } を返すように修正済み前提
+        const { minZ, maxZ, totalPoints } = await runInverseAnimation(c, N, maxIter, 800);
 
-      // 入力フォームも任意で初期値に戻す
-      inputRe.value   = '-0.4';
-      inputIm.value   = '0.6';
-      inputN.value    = '90';
-      inputIter.value = '12';
+        // ステータスを更新
+        status.textContent = `(完了: N=${N}, maxIter=${maxIter}, 点数=${totalPoints})`;
+
+        // 凡例を新しい範囲で更新
+        legendMinZ = minZ;
+        legendMaxZ = maxZ;
+        drawLegend(legendMinZ, legendMaxZ);
+      } catch (err) {
+        console.error(err);
+        status.textContent = '(エラー発生)';
+      }
     });
   </script>
 </body>
